src/objects/ServiceAssignment_Diagnosis_JO__c.object
<CustomObject>
    <description>This junction object is used to establish many to many relationship between SA and Diagnosis</description>
    <fields>
        <fullName>ABI_Diagnosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ABI Diagnosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Injury__c</fullName>
        <label>Date of Injury</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnosis__c</fullName>
        <label>Diagnosis</label>
        <referenceTo>Diagnosis__c</referenceTo>
        <relationshipLabel>ServiceAssignment Diagnosis JO</relationshipLabel>
        <relationshipName>ServiceAssignment_Diagnosis_JO</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Glasgow_Coma_Scale_Severity__c</fullName>
        <label>Glasgow Coma Scale Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Severe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Glasgow_Coma_Score_at_Injury__c</fullName>
        <label>Glasgow Coma Score at Injury</label>
        <picklist>
            <picklistValues>
                <fullName>3-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13-15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Injury_Type__c</fullName>
        <label>Injury Type</label>
        <picklist>
            <picklistValues>
                <fullName>Acquired Brain Injury - Anoxia/hypoxia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquired Brain Injury – CVA – R hemiplegia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquired Brain Injury – CVA – L hemiplegia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquired Brain Injury – TBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquired Brain Injury – Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognitive Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONGENTIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical - Cardiac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical - GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical - GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical - Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuro - Degenerative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuro - Non-degenerative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulmonary - End-stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pulmonary - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic - Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic - Injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Cord Injury - C 1-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Cord Injury - C4-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Cord Injury - C6-8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spinal Cord Injury - Paraplegia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ranking__c</fullName>
        <label>Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>ServiceAssignment Diagnosis JO</relationshipLabel>
        <relationshipName>ServiceAssignment_Diagnosis_JO</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ServiceAssignment Diagnosis JO</label>
    <nameField>
        <label>ServiceAssignment Diagnosis JO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceAssignment Diagnosis JO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>